# servprog78

./: .gitignore  pyproject.toml
database/: db.db
scripts/: init_db.py
scripts/sql/: 03_university_year.sql  04_university_ranking_year.sql
servprog78/: app.py  dependencies.py  models.py
servprog78/dependencies/: auth.py  database.py
servprog78/routers/: auth.py  countries.py  ranking_criteria.py  ranking_systems.py  universities.py  university_ranking_years.py  university_years.py
servprog78/routers/shared/: controller.py
